[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/levels_list/cards/base_card.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/theme.tres" type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 40 )

[node name="BaseCard" type="Button"]
margin_right = 96.0
margin_bottom = 20.0
rect_min_size = Vector2( 96, 80 )
rect_pivot_offset = Vector2( 88, 0 )
theme = ExtResource( 2 )
flat = true
script = ExtResource( 1 )

[node name="Decoration" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="DragSlot" type="Area2D" parent="."]
visible = false
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragSlot"]
position = Vector2( 48, 40 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
rect = Rect2( -10, -10, 116, 100 )

[connection signal="button_down" from="." to="." method="button_down"]
[connection signal="button_up" from="." to="." method="button_up"]
